fixed issue with absolute positioned elements overlapping and blocking anchor links

--- a/scss/main-styles.scss
+++ b/scss/main-styles.scss
@@ -82,6 +82,7 @@ a{
 
 .showText{
   opacity:1;
+  z-index:2000;
 }
 
 nav{
